<resources>
    <string name="app_name">Maréu</string>

    <!--Content descriptions-->
    <string name="desc_meeting_icon">Meeting icon</string>
    <string name="desc_add_meeting">Add meeting</string>
    <string name="desc_delete_meeting">Delete meeting</string>

    <!--Static texts-->
    <string name="label_main_activity">Ma réu</string>
    <string name="text_filter">Filter</string>
    <string name="text_filter_room">Room</string>
    <string name="text_filter_time">Time</string>
    <string name="text_filter_by">Filter by : </string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>

    <!--Room names-->
    <string name="room_mario">Mario</string>
    <string name="room_luigi">Luigi</string>
    <string name="room_peach">Peach</string>
    <string name="room_toad">Toad</string>
    <string name="room_yoshi">Yoshi</string>
    <string name="room_daisy">Daisy</string>
    <string name="room_dk">D.K.</string>
    <string name="room_rosalina">Rosalina</string>
    <string name="room_browser">Browser</string>
    <string name="room_wario">Wario</string>
    <string name="room_waluigi">Waluigi</string>
    <string name="apply_text">Apply</string>
    <string name="desc_reset_filter">Reset filter</string>
    <string name="desc_close_add_meeting_screen">Close add meeting screen</string>
    <string name="text_add_meeting">Add a new meeting</string>
    <string name="text_add_meeting_room">Room: </string>
    <string name="text_add_meeting_participants">Participants: </string>
    <string name="desc_add_participant">Add a participant</string>
    <string name="text_add_meeting_time">Time : </string>
    <string name="title_add_meeting">Add Meeting</string>
    <string name="text_subject">Subject</string>
    <string name="text_add_manual">Add manually</string>

</resources>