...
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewRooms"
        />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/time_filter_slider_margin_horizontal"
        android:layout_marginTop="5dp"
        android:stepSize="1.0"
        android:valueFrom="0"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderTime"
        tools:text="05-24"
        />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apply_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
